# prefixsuffix

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile_tests.am  NEWS  README  README.cmake  TODO  autogen.sh  configure.ac  format.sh  index.html  manifest.json  manifest.json.README.md  params.json
data/: io.github.murraycu.PrefixSuffix.gschema.xml.in  org.gnome.prefixsuffix.gschema.xml.in  prefixsuffix.desktop.in  prefixsuffix.desktop.in.in  prefixsuffix.glade  prefixsuffix.gresource.xml
docs/: Makefile.am  Makefile_web.am_fragment  index.html
help/C/: Makefile.am
keys/: prefixsuffix.gpg
po/: POTFILES.in  POTFILES.skip  de.po  fr.po  hu.po
repo/: summary
repo/refs/heads/app/io.github.murraycu.PrefixSuffix/x86_64/: master
repo/refs/heads/app/org.glom.PrefixDevel/x86_64/: master
repo/refs/heads/app/org.gnome.PrefixSuffix/x86_64/: master
repo/tmp/: tmp-xdg-app_build-export1000-NUopQOD7.tmp  tmp-xdg-app_build-export1000-ajXI8UPe.tmp  tmp-xdg-app_build-export1000-dkeueie0.tmp
repos/prefixsuffix/: summary
src/: CMakeLists.txt  Makefile.am  application.cc  application.h  config.h.in  constants.h  file_renamer.cc  file_renamer.h  main.cc  mainwindow.cc  mainwindow.h  prefixsuffix.glade  renamer.cc  renamer.h  string_renamer.cc  string_renamer.h
src/bakery/Configuration/: Association.cc  Association.h  AssociationBase.cc  AssociationBase.h  Client.cc  Client.h
src/bakery/Utilities/: sharedptr.h
tests/: CMakeLists.txt  test_rename_strings.cc
